# parea3

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libtool  pyindent3parea.exe.stackdump  sh.exe.stackdump
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
mm3parea/: Makefile  Makefile.am  Makefile.in  mm2.c  mm2.h
mm3parea/.deps/: mm2.Plo
old_pyindent3parea/: common.h  decorate.cpp  indent.cpp  strip.cpp  test.py
pyindent3parea/: Makefile  Makefile.am  Makefile.in  decorate.cpp  info_pyindent3parea.texi  main.cpp  pyindent3parea.texi  strip.cpp  test.py  test1.py
pyindent3parea/.deps/: decorate.Po  main.Po
pyscan3parea/: Makefile  Makefile.am  Makefile.in  appl.h  inc.c  inc.h  lex.yy_.c  main.c  main.h  pyscan3parea_test.exe.stackdump  python.c  python.h  pythontest.cpp  x_io1.h  x_rm1.lex.bac  x_rm1.tab.h  x_rm1.tab1.c  x_rm1.y
pyscan3parea/.deps/: libpyscan3parea_la-inc.Plo  libpyscan3parea_la-lex.yy_.Plo  libpyscan3parea_la-main.Plo  libpyscan3parea_la-x_rm1.tab1.Plo  pythontest.Po
rm3parea/: Makefile  Makefile.am  Makefile.in  aa.c  aa.h  col.c  col.h  list.c  list.h  misc.c  misc.h  rbt.c  rbt.h  rbt_shortcuts.h  rm1.h  stack.c  stack.h
rm3parea/.deps/: librm3parea_la-aa.Plo  librm3parea_la-col.Plo  librm3parea_la-list.Plo  librm3parea_la-misc.Plo  librm3parea_la-rbt.Plo  librm3parea_la-stack.Plo
